# kholder

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: tests.yml
kholder/: manage.py
kholder/keys/: admin.py  apps.py  models.py  urls.py  views.py
kholder/keys/migrations/: 0001_initial.py
kholder/keys/tests/: tests.py
kholder/keys/utils/: utils.py
kholder/kholder/: asgi.py  settings.py  urls.py  wsgi.py
kholder/local_admin/: admin.py  apps.py
kholder/local_admin/management/commands/: delete_admin.py  init_admin.py
kholder/static/: openapi.yaml
kholder/templates/: index.html  swagger.html
scripts/: delete_admin.sh  generate_dotenv.py  init_admin.sh  reset_db.sh
